libfirmincludedir=$(includedir)/libfirm
libfirminclude_HEADERS = \
	absgraph.h \
	analyze_irg_args.h \
	archop.h \
	be.h \
	callgraph.h \
	cdep.h \
	cgana.h \
	dbginfo.h \
	dfs.h \
	execfreq.h \
	execution_frequency.h \
	field_temperature.h \
	firm_common.h \
	firm.h \
	firmstat.h \
	firm_types.h \
	firm_ycomp.h \
	height.h \
	ident.h \
	interval_analysis.h \
	irarch.h \
	ircgcons.h \
	ircgopt.h \
	irconsconfirm.h \
	ircons.h \
	irdom.h \
	irdump.h \
	iredgekinds.h \
	iredges.h \
	irextbb.h \
	irflag.h \
	irgmod.h \
	irgopt.h \
	irgraph.h \
	irgwalk.h \
	irhooks.h \
	irlivechk.h \
	irloop.h \
	irmemory.h \
	irmode.h \
	irnode.h \
	irop.h \
	iropt_dbg.h \
	iropt.h \
	iroptimize.h \
	irouts.h \
	irprintf.h \
	irprog.h \
	irsimpletype.h \
	irtypeinfo.h \
	irvrfy.h \
	lowering.h \
	old_fctnames.h \
	phiclass.h \
	pseudo_irg.h \
	rta.h \
	seqnumbers.h \
	structure.h \
	timing.h \
	trouts.h \
	tv.h \
	typerep.h

libfirminclude_adtdir=$(includedir)/libfirm/adt
libfirminclude_adt_HEADERS = \
	adt/align.h \
	adt/array.h \
	adt/bipartite.h \
	adt/cpset.h \
	adt/eset.h \
	adt/fourcc.h \
	adt/gaussjordan.h \
	adt/gaussseidel.h \
	adt/hashptr.h \
	adt/hashset.h \
	adt/hungarian.h \
	adt/impl.h \
	adt/iterator.h \
	adt/list.h \
	adt/obst.h \
	adt/obstack.h \
	adt/offset.h \
	adt/pdeq.h \
	adt/plist.h \
	adt/pmap.h \
	adt/pqueue.h \
	adt/pset.h \
	adt/pset_new.h \
	adt/raw_bitset.h \
	adt/set.h \
	adt/unionfind.h \
	adt/util.h \
	adt/xmalloc.h
