libfirmincludedir=$(includedir)/libfirm
libfirminclude_HEADERS = \
	analyze_irg_args.h \
	be.h \
	begin.h \
	callgraph.h \
	cdep.h \
	cgana.h \
	compound_path.h \
	dbginfo.h \
	end.h \
	execfreq.h \
	execution_frequency.h \
	field_temperature.h \
	firm_common.h \
	firm.h \
	firmstat.h \
	firm_types.h \
	height.h \
	ident.h \
	interval_analysis.h \
	irarch.h \
	ircgcons.h \
	ircgopt.h \
	irconsconfirm.h \
	ircons.h \
	irdom.h \
	irdump.h \
	iredgekinds.h \
	iredges.h \
	irextbb.h \
	irflag.h \
	irgmod.h \
	irgopt.h \
	irgraph.h \
	irgwalk.h \
	irhooks.h \
	irio.h \
	irloop.h \
	irmemory.h \
	irmode.h \
	irnode.h \
	irop.h \
	iropt.h \
	iroptimize.h \
	irouts.h \
	irpass.h \
	irprintf.h \
	irprog.h \
	irsimpletype.h \
	irtypeinfo.h \
	irvrfy.h \
	lowering.h \
	pseudo_irg.h \
	rta.h \
	seqnumbers.h \
	structure.h \
	timing.h \
	trouts.h \
	tv.h \
	typerep.h \
	vrp.h

libfirminclude_adtdir=$(includedir)/libfirm/adt
libfirminclude_adt_HEADERS = \
	adt/array.h \
	adt/bipartite.h \
	adt/cpset.h \
	adt/eset.h \
	adt/fourcc.h \
	adt/gaussjordan.h \
	adt/gaussseidel.h \
	adt/hashptr.h \
	adt/hashset.h \
	adt/hungarian.h \
	adt/iterator.h \
	adt/list.h \
	adt/obstack.h \
	adt/obst.h \
	adt/pdeq.h \
	adt/plist.h \
	adt/pmap.h \
	adt/pqueue.h \
	adt/pset.h \
	adt/pset_new.h \
	adt/set.h \
	adt/unionfind.h \
	adt/xmalloc.h
