libfirmincludedir=$(includedir)/libfirm
libfirminclude_HEADERS = \
	analyze_irg_args.h \
	begin.h \
	be.h \
	callgraph.h \
	cdep.h \
	cgana.h \
	dbginfo.h \
	end.h \
	execfreq.h \
	firm_common.h \
	firm.h \
	firmstat.h \
	firm_types.h \
	heights.h \
	ident.h \
	irarch.h \
	ircgopt.h \
	irconsconfirm.h \
	ircons.h \
	irdom.h \
	irdump.h \
	iredgekinds.h \
	iredges.h \
	irflag.h \
	irgmod.h \
	irgopt.h \
	irgraph.h \
	irgwalk.h \
	irhooks.h \
	irio.h \
	irloop.h \
	irmemory.h \
	irmode.h \
	irnode.h \
	irop.h \
	iropt.h \
	iroptimize.h \
	irouts.h \
	irprintf.h \
	irprog.h \
	irverify.h \
	lowering.h \
	nodeops.h \
	opcodes.h \
	statev.h \
	timing.h \
	tv.h \
	typerep.h \
	vrp.h

libfirminclude_adtdir=$(includedir)/libfirm/adt
libfirminclude_adt_HEADERS = \
	adt/array.h \
	adt/bipartite.h \
	adt/gaussjordan.h \
	adt/gaussseidel.h \
	adt/hashptr.h \
	adt/hungarian.h \
	adt/list.h \
	adt/obstack.h \
	adt/obst.h \
	adt/pdeq.h \
	adt/plist.h \
	adt/pmap.h \
	adt/pqueue.h \
	adt/pset.h \
	adt/set.h \
	adt/unionfind.h \
	adt/xmalloc.h
